# JewelBox-Music-Desktop-Player

./: .coverage  .gitignore  Makefile  README.md  io.github.william_de71.JewelBox.json  meson.build  pyproject.toml  release.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/pages/: index.html  jewelbox.flatpakrepo
.github/workflows/: pr.yml  release.yml
data/: io.github.william_de71.JewelBox.desktop.in  io.github.william_de71.JewelBox.gschema.xml  io.github.william_de71.JewelBox.metainfo.xml.in  meson.build
po/: LINGUAS  POTFILES  meson.build
src/: jewelbox.gresource.xml  jewelbox.in  meson.build  style.css
src/jewelbox/: __init__.py  __main__.py  main.py  window.py
src/jewelbox/api/: client.py  models.py  parsing.py
src/jewelbox/core/: device.py  formats.py  library.py  queue.py  scrobble.py  server_url.py
src/jewelbox/playback/: player.py  session.py
src/jewelbox/ui/: album_detail.py  full_player.py  home.py  library.py  no_server_page.py  player_bar.py  playlist_detail.py  playlists.py  preferences.py  search.py  smart_playlist_detail.py  smart_specs.py
tests/: conftest.py  test_device.py  test_formats.py  test_library.py  test_parsing.py  test_queue.py  test_scrobble.py  test_server_url.py
